tdf#146756 pie chart2: import extLst manualLayout W and H

The width of text labels in pie charts is currently determined
completely arbitrarily.

If the file specifies X and Y coordinates along with W and H sizing,
then perhaps it is appropriate to use this?
We currently import but ignore X/Y,
so lets also make W/H available
so we at least have a chance to ignore those too.

Change-Id: I5caa48cf899e4e290eb2e8e78f731b6c5bcdd017
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162589
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>