oox/source/drawingml/chart/chartcontextbase.cxx
@@ -58,10 +58,12 @@ ContextHandlerRef LayoutContext::onCreateContext( sal_Int32 nElement, const Attr
     switch( getCurrentElement() )
     {
         case C_TOKEN( layout ):
+        case C15_TOKEN(layout):
             switch( nElement )
             {
                 case C_TOKEN( manualLayout ):
-                    mrModel.mbAutoLayout = false;
+                    if (getCurrentElement() == C_TOKEN(layout))
+                        mrModel.mbAutoLayout = false;
                     return this;
             }
         break;
